<resources>
    <string name="app_name">LastFm</string>
    <string name="artists">Artistas</string>
    <string name="tracks">Pistas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Buscar</string>
    <string name="published">Publicación</string>
    <string name="fan_pages">Página Web</string>
    <string name="biography">Biografía</string>
    <string name="artists_similars">Artistas similares</string>
    <string name="tags">Tags</string>
    <string name="detail">Detalle</string>
    <string name="wiki">Wiki</string>
    <string name="n_plays">Número de reproducciones</string>
    <string name="artist">Artista</string>
</resources>
